deployment fix vercel

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "e7gzli",
   "version": "1.0.0",
   "description": "🎟️ Welcome to Our Event Ticket Store! 🎟️ Are you ready for unforgettable experiences?",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node app.js"
   },
   "keywords": [],
   "author": "",
