--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }] ,
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/index.js" }] ,
 
     "build": {
       "env": {
@@ -8,3 +8,4 @@
   
   
 }
+
