--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node app.js",
+    "build": "node index.js",
      "postinstall": "npm rebuild bcrypt --build-from-source"
   },
 
