--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node index.js",
-     "postinstall": "npm rebuild bcrypt --build-from-source"
+    "postinstall": "npm rebuild bcrypt --build-from-source"
   },
-
   "engines": {
-  "node": "20.x"
-},
-
+    "node": "20.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cores": "^0.8.5",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
