--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
     "cores": "^0.8.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
