--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "express-session": "^1.18.0",
+    "install": "^0.13.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "node": "^22.3.0",
